--- a/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
+++ b/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
@@ -260,7 +260,6 @@
 
 	.rich-text.jetpack-field-label__input {
 		cursor: text;
-		padding-right: 8px;
 		font-weight: bold;
 	}
 
@@ -268,7 +267,9 @@
 		word-break: normal;
 		color: unset;
 		opacity: 0.45;
-		font-size: 15px;
+		font-size: 85%;
+		margin-left: 0.25em;
+		font-weight: normal;
 	}
 
 	.components-toggle-control .components-base-control__field {
@@ -281,42 +282,31 @@
 	padding: 0;
 }
 
-input.components-text-control__input {
-	line-height: 16px;
-}
-
-/*
-	Gutenberg adds some default styling to the TextControl component
-	(https://github.com/WordPress/gutenberg/blob/trunk/packages/base-styles/_mixins.scss#L130)
-	For the TextareaControl, since the base styles are added to the StyledComponent,
-	(https://github.com/WordPress/gutenberg/blob/trunk/packages/components/src/textarea-control/styles/textarea-control-styles.ts#L13)
-	The output CSS has a lower specificity and it's being overridden on themes like
-	Twenty Twenty-One and Twenty Twenty-Two.
-	Adding this to normalize the styles between the TextControl and TextareaControl
- */
-:where(.jetpack-field) textarea.components-textarea-control__input {
-	border: 1px solid #757575;
+.jetpack-field__textarea {
+	min-height: 200px;
 }
 
 .jetpack-field {
-	// done to increase elevate specificity in order to overwrite calypso styles
-	.components-text-control__input.components-text-control__input {
+	.jetpack-field__input, .jetpack-field__textarea {
 		width: 100%;
-	}
-	input.components-text-control__input,
-	textarea.components-textarea-control__input {
-		color: #787c82;
-		padding: 12px 8px;
+		font: inherit;
+		box-sizing: border-box;
 		box-shadow: unset;
-		width: 100%;
+		border: 1px solid #8c8f94;
+		border-radius: 0;
+		padding: 16px;
+		margin: 0;
+	}
+
+	.jetpack-field__textarea {
+		border: var(--jetpack--contact-form--border);
+		border-color: var(--jetpack--contact-form--border-color);
+		border-style: var(--jetpack--contact-form--border-style);
+		border-width: var(--jetpack--contact-form--border-size);
 	}
 
 	.components-base-control__field {
 		margin-bottom: 0;
-	}
-
-	textarea.components-textarea-control__input {
-		min-height: 150px;
 	}
 
 	&.jetpack-field-checkbox .jetpack-field-checkbox__checkbox,
@@ -327,9 +317,36 @@ input.components-text-control__input {
 	}
 
 	.jetpack-option__type.jetpack-option__type {
+		width: 1rem;
+		height: 1rem;
 		border-color: currentColor;
 		opacity: 1;
+		margin: 0 0.75rem 0 0
 	}
+
+	&.jetpack-field-multiple {
+		.jetpack-field-multiple__add-option {
+			margin: 0;
+			padding: 0;
+
+			.dashicon {
+				width: 1rem;
+				height: 1rem;
+				display: flex;
+				margin-left: 0;
+				margin-right: 0.75rem;
+
+				&:before {
+					font-size: 1rem;
+				}
+			}
+
+			svg {
+				margin-right: 12px;
+			}
+		}
+	}
+
 
 	.jetpack-field-consent__checkbox + .jetpack-field-label {
 		line-height: normal;
@@ -351,6 +368,9 @@ input.components-text-control__input {
 	list-style-type: none;
 	margin: 0;
 	padding-left: 0;
+	display: flex;
+	flex-direction: column;
+	gap: 0.25em;
 
 	&:empty {
 		display: none;
@@ -377,12 +397,13 @@ input.components-text-control__input {
 // Duplicated to elevate specificity in order to overwrite core styles
 .jetpack-option__input.jetpack-option__input.jetpack-option__input {
 	color: inherit;
-	border-color: transparent;
 	background: transparent;
+	border: none;
 	border-radius: 0;
 	flex-grow: 1;
-	line-height: normal;
+	line-height: 1.5;
 	font-size: inherit;
+	padding: 0;
 
 	&:hover {
 		border-color: #357cb5;
@@ -403,16 +424,6 @@ input.components-text-control__input {
 .jetpack-option__remove.jetpack-option__remove {
 	padding: 6px;
 	vertical-align: bottom;
-}
-
-.jetpack-field-multiple__add-option {
-	margin-left: -6px;
-	padding: 4px;
-	padding-right: 8px;
-
-	svg {
-		margin-right: 12px;
-	}
 }
 
 .jetpack-field .components-base-control__label {
@@ -496,6 +507,10 @@ input.components-text-control__input {
 	flex-direction: column;
 	font-family: var(--jetpack--contact-form--font-family);
 
+	&__wrapper {
+		position: relative;
+	}
+
 	&__toggle {
 		border: var(--jetpack--contact-form--border);
 		border-color: var(--jetpack--contact-form--border-color);
@@ -555,6 +570,248 @@ input.components-text-control__input {
 
 		.rich-text {
 			padding: var(--jetpack--contact-form--input-padding);
+		}
+	}
+}
+
+.jetpack-contact-form {
+	.jetpack-field {
+		.jetpack-field__input, .jetpack-field__textarea {
+			color: #787c82; //Simulates a placeholder color
+		}
+	}
+
+	&.is-style-outlined, &.is-style-animated {
+		.jetpack-field {
+			position: relative;
+		}
+	}
+
+	&.is-style-outlined {
+		.block-editor-block-list__block:not([contenteditable]):focus:after {
+			top: -10px;
+			left: -10px;
+			bottom: -10px;
+			right: -10px;
+		}
+
+		.jetpack-field {
+			--notch-width: max(var(--jetpack--contact-form--input-padding-left, 16px), var(--jetpack--contact-form--border-radius));
+			margin-top: 8px;
+			display: flex;
+
+			.notched-label {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				max-width: 100%;
+				height: 100%;
+				display: flex;
+				box-sizing: border-box;
+				text-align: left;
+				z-index: 1;
+			}
+
+			.notched-label__leading {
+				width: var(--notch-width);
+				border: var(--jetpack--contact-form--border);
+				border-color: var(--jetpack--contact-form--border-color);
+				border-style: var(--jetpack--contact-form--border-style);
+				border-width: var(--jetpack--contact-form--border-size);
+				border-right: none;
+				border-radius: var(--jetpack--contact-form--border-radius);
+				border-top-right-radius: unset;
+				border-bottom-right-radius: unset;
+			}
+
+			.notched-label__notch {
+				border-radius: unset;
+				border: var(--jetpack--contact-form--border);
+				border-color: var(--jetpack--contact-form--border-color);
+				border-style: var(--jetpack--contact-form--border-style);
+				border-width: var(--jetpack--contact-form--border-size);
+				padding: 0 4px;
+				transition: border 150ms linear;
+			}
+
+			// For some reason, when keeping the rule below together with the above selector,
+			// on production builds, the attributes are being reordered, causing side-effects
+			.notched-label__notch {
+				border-left: none;
+				border-right: none;
+			}
+
+			.notched-label__label {
+				position: relative;
+				top: 50%;
+				transform: translateY(-50%);
+				will-change: transform;
+				transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1);
+				margin: 0;
+
+				label {
+					font-weight: 300;
+				}
+			}
+
+			.notched-label__trailing {
+				flex-grow: 1;
+				border: var(--jetpack--contact-form--border);
+				border-color: var(--jetpack--contact-form--border-color);
+				border-style: var(--jetpack--contact-form--border-style);
+				border-width: var(--jetpack--contact-form--border-size);
+				border-left: none;
+				border-radius: var(--jetpack--contact-form--border-radius);
+				border-top-left-radius: unset;
+				border-bottom-left-radius: unset;
+			}
+
+			&.jetpack-field-textarea .notched-label__label {
+				top: var(--jetpack--contact-form--input-padding-top, 16px);
+				transform: unset;
+			}
+
+			&.is-selected, &.has-placeholder {
+				.notched-label__notch {
+					border-top-color: transparent;
+				}
+
+				.notched-label__label,
+				{
+					top: calc(var(--jetpack--contact-form--border-size) * -1);
+					transform: translateY(-50%);
+					font-size: 0.8em;
+				}
+
+				&.jetpack-field-dropdown {
+					.jetpack-field-dropdown__toggle {
+						border-color: transparent;
+						padding-left: calc(var(--notch-width) + 4px);
+						padding-right: calc(var(--notch-width) + 4px);
+					}
+				}
+			}
+
+			&.jetpack-field-multiple {
+				background-color: var(--jetpack--contact-form--input-background);
+				border-radius: var(--jetpack--contact-form--border-radius);
+				border: var(--jetpack--contact-form--border);
+				border-color: var(--jetpack--contact-form--border-color);
+				border-style: var(--jetpack--contact-form--border-style);
+				border-width: var(--jetpack--contact-form--border-size);
+				padding: var(--jetpack--contact-form--input-padding, 16px);
+				padding-top: calc(var(--jetpack--contact-form--input-padding, 16px) + 4px);
+				border-top: none;
+
+				.notched-label {
+					height: unset;
+
+					&__leading, &__notch, &__trailing {
+						border-bottom: none;
+						border-left: none;
+						border-right: none;
+					}
+				}
+			}
+
+			.jetpack-field-dropdown {
+				&__popover .rich-text {
+					padding-left: calc(var(--notch-width) + 4px);
+					padding-right: calc(var(--notch-width) + 4px);
+				}
+
+				&__icon {
+					margin-right: 0;
+				}
+			}
+
+			.jetpack-field__input, .jetpack-field__textarea {
+				display: flex;
+				border-top-color: transparent !important; //Need to override styles coming from the style attribute
+				outline: none;
+				padding-left: calc(var(--notch-width) + 4px);
+				padding-right: calc(var(--notch-width) + 4px);
+			}
+		}
+	}
+
+	&.is-style-animated {
+		.jetpack-field {
+			--left-offset: calc(var(--jetpack--contact-form--input-padding-left, 16px) + var(--jetpack--contact-form--border-size));
+			--label-left: max(var(--left-offset), var(--jetpack--contact-form--border-radius));
+			--field-padding: calc(var(--label-left) - var(--jetpack--contact-form--border-size));
+
+			.jetpack-field__input {
+				outline: none;
+			}
+
+			.jetpack-field__textarea {
+				padding: var(--jetpack--contact-form--input-padding, 16px);
+				outline: none;
+			}
+
+			.jetpack-field__input,
+			.jetpack-field__textarea,
+			.jetpack-field-dropdown__toggle
+			{
+				padding-top: 1.4em;
+				padding-left: var(--field-padding);
+				padding-right: var(--field-padding);
+			}
+
+			&.jetpack-field-dropdown {
+				.jetpack-field-dropdown__popover {
+					.rich-text {
+						padding-left: var(--field-padding);
+						padding-right: var(--field-padding);
+					}
+				}
+			}
+
+			&.jetpack-field-multiple {
+				background-color: var(--jetpack--contact-form--input-background);
+				padding: var(--jetpack--contact-form--input-padding, 16px);
+				padding-top: 1.7em;
+				border-radius: var(--jetpack--contact-form--border-radius);
+				border: var(--jetpack--contact-form--border);
+				border-color: var(--jetpack--contact-form--border-color);
+				border-style: var(--jetpack--contact-form--border-style);
+				border-width: var(--jetpack--contact-form--border-size);
+			}
+
+			.animated-label__label {
+				position: absolute;
+				z-index: 1;
+				top: 50%;
+				left: var(--label-left);
+				width: 100%;
+				max-width: 100%;
+				box-sizing: border-box;
+				margin: 0;
+				transform: translateY(-50%);
+				transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1);
+			}
+
+			&.jetpack-field-textarea .animated-label__label {
+				transform: unset;
+				top: var(--jetpack--contact-form--input-padding-top, 16px);
+			}
+
+			&.is-selected, &.has-placeholder {
+				.animated-label__label {
+					font-size: 0.75em;
+					transform: translateY(0);
+					top: calc(2px + var(--jetpack--contact-form--border-size));
+				}
+			}
+		}
+	}
+
+	&.is-style-below {
+		.jetpack-field:not(.jetpack-field-checkbox) {
+			display: flex;
+			flex-direction: column-reverse;
 		}
 	}
 }
